--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="برنامه آب و هوای مشابه آیفون" />
-    <title>برنامه آب و هوا</title>
-  </head>
-  <body>
-    <noscript>برای اجرای این برنامه، جاوااسکریپت باید فعال باشد.</noscript>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>آفتابه - وضعیت آب و هوا</title>
+
+  <!-- پیش‌لود فونت -->
+  <link href="/fonts/iransansdn.ttf" as="font" type="font/ttf" crossorigin="anonymous" rel="preload">
+
+  <!-- فایل CSS -->
+  <link rel="stylesheet" href="/index.css">
+</head>
+<body>
+  <div id="root"></div>
+
+  <!-- فایل JS که React Build شده -->
+  <script src="/index.js"></script>
+</body>
 </html>
