--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>آفتابه - وضعیت آب و هوا</title>
-  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
   <div id="root"></div>
